# QOD

./: README.md  setup.cfg  setup.py
qod/: __init__.py  __main__.py  quotes.py
