[metadata]
name = qod
version = 2.0.0
author = Shashank Gopikrishna
author_email = shashank.gopikrishna@gmail.com
description = CLI Quotes from zenquotes.io
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/shashfrankenstien/QOD
license = MIT
license_files = LICENSE


[options]
packages = find:
install_requires =
	requests


[options.entry_points]
console_scripts =
	qod = qod.__main__:_cli
